--- a/Web/Responsive/index.html
+++ b/Web/Responsive/index.html
@@ -3,15 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+        content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
     <meta name="author" content="webweaver420">
     <meta name="description" content="반응형 사이트 따라하기">
     <meta name="keywords" content="반응형사이트, 웹퍼블리셔, 웹접근성, HTML5">
-    <title>반응형 사이트 만들기 : 문서 셋팅</title>
+    <title>반응형 사이트 만들기</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="css/slick.css">
 
     <!-- facebook meta tags -->
     <meta property="og:type" content="article" />
@@ -64,11 +67,13 @@
                         <a href="#">Webstandard</a>
                     </div>
                     <!-- //header_menu -->
+
                     <div class="header_tit">
                         <h1>Professional web Publihser</h1><br />
                         <a href="https://webweaver420.github.io/">https://webweaver420.github.io/</a>
                     </div>
                     <!-- //header_tit -->
+
                     <div class="header_icon">
                         <ul>
                             <li><a href="#"><i class="fa fa-html5" aria-hidden="true"></i><span>HTML5</span></a></li>
@@ -175,7 +180,7 @@
                     <article class="column col1">
                         <h4 class="col_tit">Menu</h4>
                         <p class="col_desc">Box-shadow를 이용한 마우스 오버 효과 메뉴입니다.</p>
-                        <!-- menu -->
+                        <!-- 메뉴 -->
                         <div class="menu">
                             <ul>
                                 <li><a href="#">Cafe <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
@@ -192,13 +197,14 @@
                                 </li>
                             </ul>
                         </div>
-                        <!-- //menu -->
+                        <!-- //메뉴 -->
                     </article>
                     <!-- //col1 -->
+
                     <article class="column col2">
                         <h4 class="col_tit">Notice</h4>
                         <p class="col_desc">게시판 영역의 한줄 효과와 두줄 효과 게시판입니다.</p>
-                        <!-- notice1 -->
+                        <!-- 게시판1 -->
                         <div class="notice1">
                             <h5>Notice1</h5>
                             <ul>
@@ -210,8 +216,8 @@
                             <a href="#" class="more" title="더 보기">More <i class="fa fa-plus-circle"
                                     aria-hidden="true"></i></a>
                         </div>
-                        <!-- //notice1 -->
-                        <!-- notice2 -->
+                        <!-- //게시판1 -->
+                        <!-- 게시판2 -->
                         <div class="notice2 mt15">
                             <h5>Notice2</h5>
                             <ul>
@@ -223,28 +229,52 @@
                             <a href="#" class="more" title="더 보기">More <i class="fa fa-plus-circle"
                                     aria-hidden="true"></i></a>
                         </div>
-                        <!-- //notice2 -->
+                        <!-- //게시판2 -->
                     </article>
                     <!-- //col2 -->
-                    <article class="column col3">
-                        <h4 class="col_tit">title</h4>
-                        <p class="col_desc">이 곳은 설명 부분입니다.</p>
-                        <!--  -->
 
-                        <!-- // -->
+                    <article class="column col3">
+                        <h4 class="col_tit">Blog</h4>
+                        <p class="col_desc">해상도에 따라 이미지를 다르게 표현하는 방법입니다.</p>
+                        <!-- 블로그1 -->
+                        <div class="blog1">
+                            <h5 class="ir_su">image1</h5>
+                            <figure>
+                                <img src="img/blog1_@1.jpg" class="img-normal" alt="normal img">
+                                <img src="img/blog1_@2.jpg" class="img-retina" alt="retina img" width="100%">
+                                <figcaption>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지
+                                    글입니다. </figcaption>
+                            </figure>
+                        </div>
+                        <!-- //블로그1 -->
+                        <!-- 블로그2 -->
+                        <div class="blog2 mt15">
+                            <div class="img-retina">
+                                <h5>Image2</h5>
+                            </div>
+                            <p>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다.</p>
+                        </div>
+                        <!--//블로그2 -->
                     </article>
                     <!-- //col3 -->
                 </section>
+                <!-- //cont_left -->
+
                 <section id="cont_center">
                     <h3 class="ir_su">반응형 사이트 메인 컨텐츠</h3>
                     <article class="column col4">
-                        <h4 class="col_tit">title</h4>
-                        <p class="col_desc">이 곳은 설명 부분입니다.</p>
-                        <!--  -->
-
+                        <h4 class="col_tit">Slick Slider</h4>
+                        <p class="col_desc">slick.js를 이용한 이미지 슬라이드 효과입니다.</p>
+                        <!-- 이미지 슬라이드 -->
+                        <div class="slider">
+                            <div><img src="img/slider01.jpg" alt="이미지1"></div>
+                            <div><img src="img/slider04.jpg" alt="이미지4"></div>
+                            <div><img src="img/slider05.jpg" alt="이미지5"></div>
+                        </div>
                         <!-- // -->
                     </article>
                     <!-- //col4 -->
+
                     <article class="column col5">
                         <h4 class="col_tit">title</h4>
                         <p class="col_desc">이 곳은 설명 부분입니다.</p>
@@ -253,6 +283,7 @@
                         <!-- // -->
                     </article>
                     <!-- //col5 -->
+
                     <article class="column col6">
                         <h4 class="col_tit">title</h4>
                         <p class="col_desc">이 곳은 설명 부분입니다.</p>
@@ -261,7 +292,10 @@
                         <!-- // -->
                     </article>
                     <!-- //col6 -->
+
                 </section>
+                <!-- //cont_center -->
+
                 <section id="cont_right">
                     <h3 class="ir_su">반응형 사이트 오른쪽 컨텐츠</h3>
                     <article class="column col7">
@@ -272,6 +306,7 @@
                         <!-- // -->
                     </article>
                     <!-- //col7 -->
+
                     <article class="column col8">
                         <h4 class="col_tit">title</h4>
                         <p class="col_desc">이 곳은 설명 부분입니다.</p>
@@ -280,6 +315,7 @@
                         <!-- // -->
                     </article>
                     <!-- //col8 -->
+
                     <article class="column col9">
                         <h4 class="col_tit">title</h4>
                         <p class="col_desc">이 곳은 설명 부분입니다.</p>
@@ -289,6 +325,7 @@
                     </article>
                     <!-- //col9 -->
                 </section>
+                <!-- //cont_right -->
             </div>
         </section>
         <!-- //contents -->
@@ -305,11 +342,26 @@
     <!-- JavaScript Libraries -->
     <script src="js/jquery.min_1.12.4.js"></script>
     <script src="js/modernizr-custom.js"></script>
+    <script src="js/slick.min.js"></script>
     <script>
-        //http://www.facebook.com/sharer.php?u={페이지 제목}&t={페이지링크}
-        //http://twitter.com/intent/tweet?text={페이지 제목}&url={페이지링크}
-        //https://share.naver.com/web/shareView.nhn?url={페이지링크}&title={페이지 제목}
-        //https://plus.google.com/share?url={페이지링크}&t={페이지 제목}
+        //이미지 슬라이더
+        $(".slider").slick({
+            dots: true,
+            autoplay: true,
+            autoplaySpeed: 3000,
+            arrows: false,
+            responsive: [
+                {
+                    breakpoint: 768,
+                    settings: {
+                        arrows: true,
+                        dots: false
+                    }
+                }
+            ]
+        });
+
+        //sns 공유하기
         $(".facebook").click(function (e) {
             e.preventDefault();
             window.open('https://www.facebook.com/sharer/sharer.php?u=' + encodeURIComponent(document.URL) + '&t=' + encodeURIComponent(document.title), 'facebooksharedialog', 'menubar=no, toolbar=no, resizable=yes, scrollbars=yes, height=300, width=600');
