--- a/Web/Responsive/index.html
+++ b/Web/Responsive/index.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
-    <meta name="author" content="webweaver420">
+    <meta name="author" content="webstoryboy">
     <meta name="description" content="반응형 사이트 따라하기">
-    <meta name="keywords" content="반응형사이트, 웹퍼블리셔, 웹접근성, HTML5">
-    <title>반응형 사이트 만들기</title>
+    <meta name="keywords" content="반응형사이트, 웹퍼블리셔, 웹접근성, HTML5, webstoryboy, webs">
+    <title>반응형 사이트 만들기 : 이미지 슬라이드2</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/lightgallery.css">
 
-    <!-- facebook meta tags -->
+    <!-- Facebook meta tags -->
     <meta property="og:type" content="article" />
     <meta property="og:title" content="반응형 사이트 만들기(title)" />
     <meta property="og:url" content="http://richclub8.dothome.co.kr/responsive/html5/index.html" />
@@ -25,13 +26,13 @@
     <meta property="og:description" content="반응형 사이트 따라하기(description)" />
 
     <!-- twitter meta tags -->
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@webstoryboy" />
     <meta name="twitter:title" content="반응형 사이트 만들기(title)" />
     <meta name="twitter:description" content="반응형 사이트 만들기(description)." />
     <meta property="twitter:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
 
-    <!-- favicon -->
+    <!-- 파비콘 -->
     <link rel="shortcut icon" href="icon/favicon.ico">
     <link rel="apple-touch-icon-precomposed" href="icon/favicon-152.png">
     <link rel="icon" href="path/to/favicon.png">
@@ -41,9 +42,9 @@
     <link rel="icon" href="icon/favicon-64.png" sizes="64x64">
     <link rel="icon" href="icon/favicon-128.png" sizes="128x128">
 
-    <!-- web font -->
+    <!-- 웹 폰트 -->
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Brush+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
 
     <!-- HTLM5shiv ie6~8 -->
@@ -62,18 +63,16 @@
             <div class="row">
                 <div class="header">
                     <div class="header_menu">
-                        <a href="#">Blog</a>
-                        <a href="#">Github</a>
-                        <a href="#">Webstandard</a>
+                        <a href="http://websedu.tistory.com/">Blog</a>
+                        <a href="https://www.facebook.com/webstoryboys">facebook</a>
+                        <a href="http://richclub8.dothome.co.kr/webstandard/web/index.html">Webstandard</a>
                     </div>
                     <!-- //header_menu -->
-
                     <div class="header_tit">
-                        <h1>Professional web Publihser</h1><br />
-                        <a href="https://webweaver420.github.io/">https://webweaver420.github.io/</a>
+                        <h1>Professional Web Publisher</h1><br>
+                        <a href="http://webstoryboy.co.kr">webstoryboy.co.kr</a>
                     </div>
                     <!-- //header_tit -->
-
                     <div class="header_icon">
                         <ul>
                             <li><a href="#"><i class="fa fa-html5" aria-hidden="true"></i><span>HTML5</span></a></li>
@@ -81,27 +80,21 @@
                             <li><a href="#" class="facebook"><i class="fa fa-facebook-square"
                                         aria-hidden="true"></i><span>Fackbook</span></a></li>
                             <li><a href="#" class="twitter"><i class="fa fa-twitter"
-                                        aria-hidden="true"></i><span>Twitter</span></a>
-                            </li>
+                                        aria-hidden="true"></i><span>twitter</span></a></li>
                         </ul>
                     </div>
                     <!-- //header_icon -->
-
-                    <!-- 
-                        https://developers.facebook.com/tools/debug/
-                        https://cards-dev.twitter.com/validator
-                    -->
                 </div>
             </div>
         </div>
     </header>
-    <!-- header -->
+    <!-- //nav -->
 
     <nav id="nav">
         <div class="container">
             <div class="row">
                 <div class="nav">
-                    <h2 class="ir_su">반응형 사이트 전체 메뉴</h2>
+                    <h2 class="ir_su">전체 메뉴</h2>
                     <div>
                         <h3>HTML Reference</h3>
                         <ol>
@@ -161,11 +154,9 @@
     <article id="title">
         <div class="container">
             <div class="title">
-                <h2>"나는 퍼블리셔다"</h2>
-                <a href="#" class="btn">
-                    <i class="fa fa-angle-down" aria-hidden="true"></i>
-                    <span class="ir_su">전체메뉴 보기</span>
-                </a>
+                <h2>"나는 퍼블리셔다."</h2>
+                <a href="#" class="btn"><i class="fa fa-angle-down" aria-hidden="true"></i><span class="ir_su">전체메뉴
+                        보기</span></a>
             </div>
         </div>
     </article>
@@ -197,7 +188,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <!-- //메뉴 -->
+                        <!--//메뉴 -->
                     </article>
                     <!-- //col1 -->
 
@@ -208,28 +199,28 @@
                         <div class="notice1">
                             <h5>Notice1</h5>
                             <ul>
-                                <li><a href="#">이 줄은 한 줄 효과 입니다. 이 줄은 한 줄 효과 입니다. 이 줄은 한 줄 효과 입니다.</a></li>
-                                <li><a href="#">이 줄은 한 줄 효과 입니다. 이 줄은 한 줄 효과 입니다. 이 줄은 한 줄 효과 입니다.</a></li>
-                                <li><a href="#">이 줄은 한 줄 효과 입니다. 이 줄은 한 줄 효과 입니다. 이 줄은 한 줄 효과 입니다.</a></li>
-                                <li><a href="#">이 줄은 한 줄 효과 입니다. 이 줄은 한 줄 효과 입니다. 이 줄은 한 줄 효과 입니다.</a></li>
+                                <li><a href="#">한 줄 효과: "여러분의 소중한 의견을 공유해주세요. 함께 더 나은 커뮤니티를 만들어갑시다!"</a></li>
+                                <li><a href="#">한 줄 효과: "여러분의 소중한 의견을 공유해주세요. 함께 더 나은 커뮤니티를 만들어갑시다!"</a></li>
+                                <li><a href="#">한 줄 효과: "여러분의 소중한 의견을 공유해주세요. 함께 더 나은 커뮤니티를 만들어갑시다!"</a></li>
+                                <li><a href="#">한 줄 효과: "여러분의 소중한 의견을 공유해주세요. 함께 더 나은 커뮤니티를 만들어갑시다!"</a></li>
                             </ul>
                             <a href="#" class="more" title="더 보기">More <i class="fa fa-plus-circle"
                                     aria-hidden="true"></i></a>
                         </div>
-                        <!-- //게시판1 -->
+                        <!--//게시판1 -->
                         <!-- 게시판2 -->
                         <div class="notice2 mt15">
                             <h5>Notice2</h5>
                             <ul>
-                                <li><a href="#">두 줄 효과: "항상 최신 트렌드를 반영한 웹 디자인을 제공합니다. 문의 사항이 있으시면 언제든지 연락 주세요."</a></li>
-                                <li><a href="#">두 줄 효과: "항상 최신 트렌드를 반영한 웹 디자인을 제공합니다. 문의 사항이 있으시면 언제든지 연락 주세요."</a></li>
-                                <li><a href="#">두 줄 효과: "항상 최신 트렌드를 반영한 웹 디자인을 제공합니다. 문의 사항이 있으시면 언제든지 연락 주세요."</a></li>
-                                <li><a href="#">두 줄 효과: "항상 최신 트렌드를 반영한 웹 디자인을 제공합니다. 문의 사항이 있으시면 언제든지 연락 주세요."</a></li>
+                                <li><a href="#">두 줄 효과: "질문이나 제안사항이 있으시면 언제든지 게시판에 남겨주세요. 빠르게 답변드리겠습니다!"</a></li>
+                                <li><a href="#">두 줄 효과: "질문이나 제안사항이 있으시면 언제든지 게시판에 남겨주세요. 빠르게 답변드리겠습니다!"</a></li>
+                                <li><a href="#">두 줄 효과: "질문이나 제안사항이 있으시면 언제든지 게시판에 남겨주세요. 빠르게 답변드리겠습니다!"</a></li>
+                                <li><a href="#">두 줄 효과: "질문이나 제안사항이 있으시면 언제든지 게시판에 남겨주세요. 빠르게 답변드리겠습니다!"</a></li>
                             </ul>
                             <a href="#" class="more" title="더 보기">More <i class="fa fa-plus-circle"
                                     aria-hidden="true"></i></a>
                         </div>
-                        <!-- //게시판2 -->
+                        <!--//게시판2 -->
                     </article>
                     <!-- //col2 -->
 
@@ -238,15 +229,15 @@
                         <p class="col_desc">해상도에 따라 이미지를 다르게 표현하는 방법입니다.</p>
                         <!-- 블로그1 -->
                         <div class="blog1">
-                            <h5 class="ir_su">image1</h5>
+                            <h5 class="ir_su">Image1</h5>
                             <figure>
-                                <img src="img/blog1_@1.jpg" class="img-normal" alt="normal img">
-                                <img src="img/blog1_@2.jpg" class="img-retina" alt="retina img" width="100%">
+                                <img src="img/blog4_@1.jpg" class="img-normal" alt="normal image">
+                                <img src="img/blog4_@2.jpg" class="img-retina" alt="retina image">
                                 <figcaption>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지
-                                    글입니다. </figcaption>
+                                    글입니다.</figcaption>
                             </figure>
                         </div>
-                        <!-- //블로그1 -->
+                        <!--//블로그1 -->
                         <!-- 블로그2 -->
                         <div class="blog2 mt15">
                             <div class="img-retina">
@@ -261,67 +252,88 @@
                 <!-- //cont_left -->
 
                 <section id="cont_center">
-                    <h3 class="ir_su">반응형 사이트 메인 컨텐츠</h3>
+                    <h3 class="ir_su">반응형 사이트 가운데 컨텐츠</h3>
                     <article class="column col4">
                         <h4 class="col_tit">Slick Slider</h4>
                         <p class="col_desc">slick.js를 이용한 이미지 슬라이드 효과입니다.</p>
                         <!-- 이미지 슬라이드 -->
                         <div class="slider">
-                            <div><img src="img/slider01.jpg" alt="이미지1"></div>
-                            <div><img src="img/slider04.jpg" alt="이미지4"></div>
-                            <div><img src="img/slider05.jpg" alt="이미지5"></div>
+                            <div>
+                                <figure>
+                                    <img src="img/slider001.jpg" alt="이미지1">
+                                    <figcaption><em>Responsive Site</em><span>슬라이드 플러그인을 이용한 반응형 이미지 슬라이드 입니다.</span>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div>
+                                <figure>
+                                    <img src="img/slider001.jpg" alt="이미지2">
+                                    <figcaption><em>Responsive Site</em><span>슬라이드 플러그인을 이용한 반응형 이미지 슬라이드 입니다.</span>
+                                    </figcaption>
+                                </figure>
+                            </div>
+                            <div>
+                                <figure>
+                                    <img src="img/slider001.jpg" alt="이미지3">
+                                    <figcaption><em>Responsive Site</em><span>슬라이드 플러그인을 이용한 반응형 이미지 슬라이드 입니다.</span>
+                                    </figcaption>
+                                </figure>
+                            </div>
                         </div>
-                        <!-- // -->
+                        <!--//이미지 슬라이드 -->
                     </article>
                     <!-- //col4 -->
 
                     <article class="column col5">
-                        <h4 class="col_tit">title</h4>
-                        <p class="col_desc">이 곳은 설명 부분입니다.</p>
-                        <!--  -->
-
-                        <!-- // -->
+                        <h4 class="col_tit">Blend Effect</h4>
+                        <p class="col_desc">Background-blend-mode와 mix-blend-mode</p>
+                        <!-- 라이트박스 -->
+                        <div class="lightbox square clearfix">
+                            <a href="img/light01_s.jpg"><img src="img/light01.jpg" alt="이미지"><em>blur</em></a>
+                            <a href="img/light02_s.jpg"><img src="img/light02.jpg" alt="이미지"><em>brightness</em></a>
+                            <a href="img/light03_s.jpg"><img src="img/light03.jpg" alt="이미지"><em>contrast</em></a>
+                            <a href="img/light04_s.jpg"><img src="img/light04.jpg" alt="이미지"><em>grayscale</em></a>
+                            <a href="img/light05_s.jpg"><img src="img/light05.jpg" alt="이미지"><em>hue-rotate</em></a>
+                            <a href="img/light06_s.jpg"><img src="img/light06.jpg" alt="이미지"><em>invert</em></a>
+                            <a href="img/light07_s.jpg"><img src="img/light07.jpg" alt="이미지"><em>opacity</em></a>
+                            <a href="img/light08_s.jpg"><img src="img/light08.jpg" alt="이미지"><em>saturate</em></a>
+                            <a href="img/light09_s.jpg"><img src="img/light09.jpg" alt="이미지"><em>sepia</em></a>
+                            <a href="img/light10_s.jpg"><img src="img/light10.jpg" alt="이미지"><em>Mix</em></a>
+                        </div>
+                        <!-- //라이트박스-->
                     </article>
                     <!-- //col5 -->
 
                     <article class="column col6">
-                        <h4 class="col_tit">title</h4>
+                        <h4 class="col_tit">Title</h4>
                         <p class="col_desc">이 곳은 설명 부분입니다.</p>
                         <!--  -->
-
-                        <!-- // -->
+                        <!-- //-->
                     </article>
                     <!-- //col6 -->
-
                 </section>
                 <!-- //cont_center -->
-
                 <section id="cont_right">
                     <h3 class="ir_su">반응형 사이트 오른쪽 컨텐츠</h3>
                     <article class="column col7">
-                        <h4 class="col_tit">title</h4>
+                        <h4 class="col_tit">Title</h4>
                         <p class="col_desc">이 곳은 설명 부분입니다.</p>
                         <!--  -->
-
-                        <!-- // -->
+                        <!-- //-->
                     </article>
                     <!-- //col7 -->
-
                     <article class="column col8">
-                        <h4 class="col_tit">title</h4>
+                        <h4 class="col_tit">Title</h4>
                         <p class="col_desc">이 곳은 설명 부분입니다.</p>
                         <!--  -->
-
-                        <!-- // -->
+                        <!-- //-->
                     </article>
                     <!-- //col8 -->
-
                     <article class="column col9">
-                        <h4 class="col_tit">title</h4>
+                        <h4 class="col_tit">Title</h4>
                         <p class="col_desc">이 곳은 설명 부분입니다.</p>
                         <!--  -->
-
-                        <!-- // -->
+                        <!-- //-->
                     </article>
                     <!-- //col9 -->
                 </section>
@@ -338,24 +350,31 @@
     </footer>
     <!-- //footer -->
 
-
     <!-- JavaScript Libraries -->
     <script src="js/jquery.min_1.12.4.js"></script>
     <script src="js/modernizr-custom.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/lightgallery.min.js"></script>
     <script>
+        //라이트박스
+        $(".lightbox").lightGallery({
+            thumbnail: true,
+            autoplay: true,
+            pause: 3000,
+            progressBar: true
+        });
+
         //이미지 슬라이더
         $(".slider").slick({
             dots: true,
             autoplay: true,
             autoplaySpeed: 3000,
-            arrows: false,
+            arrows: true,
             responsive: [
                 {
                     breakpoint: 768,
                     settings: {
-                        arrows: true,
-                        dots: false
+                        autoplay: false,
                     }
                 }
             ]
