--- a/Web/Responsive/layout5.html
+++ b/Web/Responsive/layout5.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout5</title>
+    <title>layout6</title>
     <style>
         * {
             margin: 0;
@@ -12,7 +12,7 @@
         }
 
         body {
-            background-color: #fffde7;
+            background: #e3f2fd;
         }
 
         #wrap {
@@ -20,77 +20,192 @@
             margin: 0 auto;
         }
 
-        header {
+        #header {
             width: 100%;
             height: 100px;
-            background-color: #ffe082;
+            background-color: #b2defe;
         }
 
-        article {
+        #main {
             width: 100%;
-            height: 300px;
-            background-color: #ffd54f;
+            height: 400px;
+            background-color: #7ecbfd;
         }
 
-        section {
-            width: 90%;
-            background-color: #ffca28;
+        #contents1 {
+            overflow: hidden;
+        }
+
+        #contents1 .nav {
+            float: left;
+            width: 20%;
+            height: 500px;
+            background-color: #43b5fc;
+        }
+
+        #contents1 .subcontent1 {
+            float: left;
+            width: 80%;
+            height: 250px;
+            background-color: #00a5fb;
+        }
+
+        #contents1 .subcontent2 {
+            float: left;
+            width: 80%;
+            height: 250px;
+            background-color: #0096fa;
+        }
+
+        #contents2 {
+            overflow: hidden;
+        }
+
+        #contents2 .article_box1 {
+            float: left;
+            width: 33.3333%;
+            height: 300px;
+            background-color: #0088ec;
+        }
+
+        #contents2 .article_box2 {
+            float: left;
+            width: 33.3333%;
+            height: 300px;
+            background-color: #0076d9;
+        }
+
+        #contents2 .article_box3 {
+            float: left;
+            width: 33.3333%;
+            height: 300px;
+            background-color: #0064c6;
+        }
+
+        #contents3 {
             overflow: hidden;
             padding: 5%;
+            background-color: #00a6fc;
         }
 
-        section>div {
+        #contents3 .article_square1 {
             float: left;
-            width: 18%;
-            height: 170px;
+            width: 23%;
+            height: 200px;
             margin: 1%;
-            background-color: #ff9800;
-            border-radius: 5px;
+            border-radius: 5%;
+            background-color: #0076d9;
         }
 
-        footer {
+        #contents3 .article_square2 {
+            float: left;
+            width: 23%;
+            height: 200px;
+            margin: 1%;
+            border-radius: 5%;
+            background-color: #0076d9;
+        }
+
+        #contents3 .article_square3 {
+            float: left;
+            width: 23%;
+            height: 200px;
+            margin: 1%;
+            border-radius: 5%;
+            background-color: #0076d9;
+        }
+
+        #contents3 .article_square4 {
+            float: left;
+            width: 23%;
+            height: 200px;
+            margin: 1%;
+            border-radius: 5%;
+            background-color: #0076d9;
+        }
+
+        #footer {
             width: 100%;
             height: 100px;
-            background-color: #ffb300;
+            background-color: #43b5fc;
         }
 
-        /* 화면 너비 0 ~ 1200px */
-        @media (max-width: 1220px) {
+        /* 화면 너비 1200px */
+        @media (max-width: 1240px) {
             #wrap {
-                width: 100%;
+                width: 100%
             }
 
-            section>div {
-                width: 23%;
-                /* div박스가 4개가 나와야 하니까 25%에서 마진값 빼줌 */
+            #contents2 .article_box1 {
+                width: 50%;
             }
 
-            section>div:nth-child(5n) {
+            #contents2 .article_box2 {
+                width: 50%;
+            }
+
+            #contents2 .article_box3 {
+                display: none;
+            }
+
+            #contents3 .article_square1 {
+                width: 31.3333%;
+            }
+
+            #contents3 .article_square2 {
+                width: 31.3333%;
+            }
+
+            #contents3 .article_square3 {
+                width: 31.3333%;
+            }
+
+            #contents3 .article_square4 {
                 display: none;
             }
         }
 
-        /* 화면 너비 0 ~ 768px */
+        /* 화면 너비 768px */
         @media (max-width: 768px) {
-            section>div {
-                width: 31.3333%;
-                /* div박스가 3개가 나와야 하니까 33.3333%에서 마진값 빼줌 */
+            #contents2 .article_box1 {
+                width: 100%;
             }
 
-            section>div:nth-child(5) {
-                display: block;
+            #contents2 .article_box2 {
+                width: 100%;
             }
         }
 
-        /* 화면 너비 0 ~ 480px */
+        /* 화면 너비 480px */
         @media (max-width: 480px) {
-            section>div {
-                width: 48%;
-                /* div박스가 2개가 나와야 하니까 50%에서 마진값 빼줌 */
+            #contents1 .nav {
+                width: 100%;
+                height: 200px;
             }
 
-            section>div:nth-child(5n) {
-                display: block;
+            #contents1 .subcontent1 {
+                width: 100%;
+                height: 200px;
+            }
+
+            #contents1 .subcontent2 {
+                width: 100%;
+                height: 200px;
+            }
+
+            #content3 .article_square1 {
+                width: 98%;
+                border-radius: 5px;
+            }
+
+            #content3 .article_square2 {
+                width: 98%;
+                border-radius: 5px;
+            }
+
+            #content3 .article_square3 {
+                width: 98%;
+                border-radius: 5px;
             }
         }
     </style>
@@ -98,21 +213,25 @@
 
 <body>
     <div id="wrap">
-        <header></header>
-        <article></article>
-        <section>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <header id="header"></header>
+        <main id="main"></main>
+        <section id="contents1">
+            <nav class="nav"></nav>
+            <article class="subcontent1"></article>
+            <article class="subcontent2"></article>
         </section>
-        <footer></footer>
+        <section id="contents2">
+            <article class="article_box1"></article>
+            <article class="article_box2"></article>
+            <article class="article_box3"></article>
+        </section>
+        <section id="contents3">
+            <article class="article_square1"></article>
+            <article class="article_square2"></article>
+            <article class="article_square3"></article>
+            <article class="article_square4"></article>
+        </section>
+        <footer id="footer"></footer>
     </div>
 </body>
 
