--- a/Web/Responsive/index.html
+++ b/Web/Responsive/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="webstoryboy">
     <meta name="description" content="반응형 사이트 따라하기">
     <meta name="keywords" content="반응형사이트, 웹퍼블리셔, 웹접근성, HTML5, webstoryboy, webs">
-    <title>반응형 사이트 만들기 : 이미지 슬라이드2</title>
+    <title>반응형 사이트 만들기</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/reset.css">
@@ -305,10 +305,20 @@
                     <!-- //col5 -->
 
                     <article class="column col6">
-                        <h4 class="col_tit">Title</h4>
-                        <p class="col_desc">이 곳은 설명 부분입니다.</p>
-                        <!--  -->
-                        <!-- //-->
+                        <h4 class="col_tit">Video</h4>
+                        <p class="col_desc">반응형 영상을 보여주는 영역입니다.</p>
+                        <!-- 비디오 -->
+                        <!-- <video autoplay="autoplay" controls="controls" loop="loop">
+                            <source src="img/video.mp4" type="video/mp4">
+                        </video> -->
+                        <div class="video">
+                            <iframe width="560" height="315"
+                                src="https://www.youtube.com/embed/ScY3FT-sdjE?si=lfV9U_EimSynMRJQ"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
+                        <!-- //비디오-->
                     </article>
                     <!-- //col6 -->
                 </section>
@@ -316,24 +326,42 @@
                 <section id="cont_right">
                     <h3 class="ir_su">반응형 사이트 오른쪽 컨텐츠</h3>
                     <article class="column col7">
-                        <h4 class="col_tit">Title</h4>
-                        <p class="col_desc">이 곳은 설명 부분입니다.</p>
-                        <!--  -->
-                        <!-- //-->
+                        <h4 class="col_tit">Effect1</h4>
+                        <p class="col_desc">CSS의 transform을 이용한 마우스 오버효과입니다.</p>
+                        <!-- side1 -->
+                        <div class="side1">
+                            <figure>
+                                <img src="img/side1.jpg" alt="이미지1">
+                            </figure>
+                            <div class="back">
+                                <i class="fa fa-heart fa-4x" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <!-- //side1-->
                     </article>
                     <!-- //col7 -->
                     <article class="column col8">
-                        <h4 class="col_tit">Title</h4>
-                        <p class="col_desc">이 곳은 설명 부분입니다.</p>
-                        <!--  -->
-                        <!-- //-->
+                        <h4 class="col_tit">Effect2</h4>
+                        <p class="col_desc">CSS의 transform을 이용한 마우스 오버효과입니다.</p>
+                        <!-- side2 -->
+                        <div class="side2">
+                            <figure>
+                                <img src="img/side2.jpg" alt="이미지1">
+                            </figure>
+                        </div>
+                        <!-- //side2-->
                     </article>
                     <!-- //col8 -->
                     <article class="column col9">
-                        <h4 class="col_tit">Title</h4>
-                        <p class="col_desc">이 곳은 설명 부분입니다.</p>
-                        <!--  -->
-                        <!-- //-->
+                        <h4 class="col_tit">Effect3</h4>
+                        <p class="col_desc">CSS의 transform을 이용한 마우스 오버효과입니다.</p>
+                        <!-- side3 -->
+                        <div class="side3">
+                            <figure>
+                                <img src="img/side3.jpg" alt="이미지1">
+                            </figure>
+                        </div>
+                        <!-- //side3-->
                     </article>
                     <!-- //col9 -->
                 </section>
@@ -345,7 +373,24 @@
 
     <footer id="footer">
         <div class="container">
-            <h2>반응형 사이트 푸터</h2>
+            <div class="row">
+                <div class="footer">
+                    <ul>
+                        <li><a href="#">사이트 도움말</a></li>
+                        <li><a href="#">사이트 이용약관</a></li>
+                        <li><a href="#">사이트 운영원칙</a></li>
+                        <li><a href="#"><strong>개인정보취급방침</strong></a></li>
+                        <li><a href="#">책임의 한계와 법적고지</a></li>
+                        <li><a href="#">게시중단요청서비스</a></li>
+                        <li><a href="#">고객센터</a></li>
+                    </ul>
+                    <address>
+                        Copyright &copy;
+                        <a href="http://webstoryboy.co.kr"><strong>webweaver420</strong></a>
+                        All Rights Reserved.
+                    </address>
+                </div>
+            </div>
         </div>
     </footer>
     <!-- //footer -->
@@ -356,6 +401,27 @@
     <script src="js/slick.min.js"></script>
     <script src="js/lightgallery.min.js"></script>
     <script>
+        // 메뉴접기
+        $(".btn").click(function (e) {
+            e.preventDefault();
+            $(".nav").slideToggle();
+            $(".btn").toggleClass("open");
+
+            if ($(".btn").hasClass("open")) {
+                // 오픈이 있을 때
+                $(".btn").find("i").attr("class", "fa fa-angle-up");
+            } else {
+                // 오픈이 없을 때
+                $(".btn").find("i").attr("class", "fa fa-angle-down");
+            }
+        });
+
+        $(window).resize(function () {
+            var wWidth = $(window).width();
+            if (wWidth > 600) {
+                $(".nav").removeAttr("style");
+            }
+        });
         //라이트박스
         $(".lightbox").lightGallery({
             thumbnail: true,
